<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/update_check"
            style="@style/ShipDetailTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="5dp"
            android:background="@color/ship_details_bg"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/need_update"
            android:layout_marginTop="15dp"
            tools:text="New Version 1.0.1"
            style="@style/ShipDetailTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/version_focus"
            style="@style/ShipDetailTextStyle"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/version_focus"
            android:autoLink="web"
            style="@style/ShipDetailTextStyle"
            android:layout_marginTop="15dp"
            android:scrollbars="vertical"
            android:layout_width="wrap_content"
            android:layout_height="120dp" />


        <TextView
            android:text="@string/down_load_tips"
            style="@style/ShipDetailTextStyle"
            android:layout_marginTop="20dp"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/confirm_text"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/download"
                style="@style/ShipDetailTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cancel_text"
                android:padding="10dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:text="@string/cancel"
                style="@style/ShipDetailTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>