<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:background="@color/ship_details_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/icon"
        android:src="@drawable/radar_icon"
        android:layout_width="24dp"
        android:layout_height="24dp" />

    <TextView
        app:layout_constraintLeft_toRightOf="@id/icon"
        app:layout_constraintTop_toTopOf="@id/icon"
        app:layout_constraintBottom_toBottomOf="@id/icon"
        android:layout_marginStart="20dp"
        android:id="@+id/type_text"
        android:layout_gravity="center"
        android:textSize="12sp"
        tools:text="Weapon"
        android:textColor="@color/ship_details_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/size_fixation"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/ship_details_text_color"

        android:text="@string/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/size_text"
        app:layout_constraintLeft_toRightOf="@id/size_fixation"
        app:layout_constraintTop_toTopOf="@id/size_fixation"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        android:textColor="@color/ship_details_text_color"
        tools:text="small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/size_fixation"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/component_size_fixation"
        android:textSize="12sp"
        android:textColor="@color/ship_details_text_color"
        android:text="@string/component_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/component_size_fixation"
        app:layout_constraintLeft_toRightOf="@id/component_size_fixation"
        android:layout_marginStart="10dp"
        android:id="@+id/component_size_text"
        android:textColor="@color/ship_details_text_color"
        android:textSize="12sp"
        tools:text="12345"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/component_size_fixation"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/quantity_fixation"
        android:textSize="12sp"
        android:textColor="@color/ship_details_text_color"
        android:text="@string/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/quantity_fixation"
        app:layout_constraintLeft_toRightOf="@id/quantity_fixation"
        android:layout_marginStart="10dp"
        android:id="@+id/quantity_text"
        android:textColor="@color/ship_details_text_color"
        android:textSize="12sp"
        tools:text="12345"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />





</android.support.constraint.ConstraintLayout>